# blender-filesize-profiler

./: pyproject.toml
src/bfp/: analysis.py  cli.py  serialization.py  visualization.py
